2006-12-09  Viktor Griph  <griph@dd.chalmers.se>

	* definitions.inc:
	updated for 2.4.20 and 2.5.19 release
	* news/index.php:
	* documentation/faq/index.php:
	regenerated

2006-12-08  Viktor Griph  <griph@dd.chalmers.se>

	* documentation/dev_modules.php: updated to reflect Send_Reply
	addition, and match current ConfigWinPacket.

2006-12-01  Dan Espen  <dane@mk.telcordia.com>

	* links.php: Remove obsolete broken link to FvwmTabs.

2006-11-26  Dan Espen  <dane@mk.telcordia.com>

	* contact/index.php: Change search to search the www.mail-archive.
	Separate fvwm and fvwm-workers searches.

2006-09-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.18

	* definitions.inc:
	updated for 2.5.18

2006-07-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* donations.php:
	updated

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.17

	* definitions.inc:
	updated for 2.5.17

2006-07-13  Scott Smedley <ss@aa.gov.au>

	* documentation/faq/index.php:
	updated FAQ

2006-04-02  Mikhael Goikhman  <migo@homemail.com>

	* index.php:
	* contact/index.php:
	update url of mailing list archives

2006-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.16

	* definitions.inc:
	updated for 2.5.16

2006-01-14  Viktor Griph  <griph@dd.chalmers.se>

	* documentation/manpages/manpages2php:
	changed to ignore autom4te.cache-files
	* documentation/manpages/unstable/*.php
	regenerated

	* news/index.php:
	regenerated

2006-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* index.php:
	updated NEWS

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.15

	* definitions.inc:
	updated for 2.5.15

2005-09-23  Viktor Griph  <griph@dd.calmers.se>
