@@ -1,3 +1,8 @@
+2007-01-14  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
+
+	* documentation/dev_modules.php:
+	updated
+
 2006-12-09  Viktor Griph  <griph@dd.chalmers.se>
 
 	* definitions.inc:
